tests/baselines/reference/systemModule11.errors.txt
tests/cases/compiler/systemModule11.ts(3,17): error TS2307: Cannot find module 'bar'.


==== tests/cases/compiler/systemModule11.ts (1 errors) ====
    
    import 'foo'
    import {f} from 'bar';
                    ~~~~~
!!! error TS2307: Cannot find module 'bar'.
    
    f();